get and post of books tested

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "donationweb-2.0",
+  "name": "bookmanagement",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test":"NODE_ENV=test mocha test/routes/bm-test.js"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
+    "chai-things": "^0.2.0",
     "mocha": "^3.4.2"
   }
 }
