--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "npm-run-all test build server",
+    "clean": "rimraf ./lib && mkdir lib",
+    "server": "cross-env NODE_ENV=dev PORT=3001 node lib/bin/www",
     "build": "babel ./ --out-dir lib/ --ignore ./node_modules,./.babelrc,./package.json,./package-lock.json,./test --copy-files",
     "test": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register test/routes/bm-test.js"
   },
@@ -32,6 +34,8 @@
     "chai-things": "^0.2.0",
     "cross-env": "^5.2.0",
     "mocha": "^3.4.2",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^2.6.2",
     "supertest": "^3.3.0"
   }
 }
