--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "scripts": {
     "start": "npm-run-all test build server",
+    "postbuild": "npm run server",
+    "test:watch": "npm run test -- --watch",
+    "prebuild": "npm-run-all test clean",
     "clean": "rimraf ./lib && mkdir lib",
+    "server:watch": "cross-env NODE_ENV=dev nodemon --exec babel-node bin/www",
     "server": "cross-env NODE_ENV=dev PORT=3001 node lib/bin/www",
     "build": "babel ./ --out-dir lib/ --ignore ./node_modules,./.babelrc,./package.json,./package-lock.json,./test --copy-files",
     "test": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register test/routes/bm-test.js"
@@ -34,6 +38,7 @@
     "chai-things": "^0.2.0",
     "cross-env": "^5.2.0",
     "mocha": "^3.4.2",
+    "nodemon": "^1.18.8",
     "npm-run-all": "^4.1.5",
     "rimraf": "^2.6.2",
     "supertest": "^3.3.0"
