--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "server:watch": "cross-env NODE_ENV=dev nodemon --exec babel-node bin/www",
     "server": "cross-env NODE_ENV=dev PORT=3001 node lib/bin/www",
     "build": "babel ./ --out-dir lib/ --ignore ./node_modules,./.babelrc,./package.json,./package-lock.json,./test --copy-files",
-    "test": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register test/routes/bm-test.js"
+    "test": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register test/routes/bm-test.js",
+    "coverage": "cross-env NODE_ENV=test PORT=4000 nyc mocha test/routes/bm-test.js"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-plugin-istanbul": "^4.1.5",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
@@ -40,6 +42,7 @@
     "mocha": "^3.4.2",
     "nodemon": "^1.18.8",
     "npm-run-all": "^4.1.5",
+    "nyc": "^13.1.0",
     "rimraf": "^2.6.2",
     "supertest": "^3.3.0"
   }
