--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ node_js:
 - stable
 script:
 - npm run coverage
+after_success:
+- npm run publish-coverage
 notifications:
    email:
       recipients:
